--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 		<header></header>
 		<div class="ct">
 			<ul>
-				<li class="li li2"></li>
+				<li class="li"></li>
 				<li class="li li2"></li>
 				<li class="li li2"></li>
 				<li class="li li2"></li>
