--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,7 @@
 				<li class="li"></li>
 				<li class="li"></li>
 				<li class="li"></li>
+		<div></div>
 			</ul>
 		</div>
 		<footer></footer>
